Fixed letter-spacing in light theme

--- a/browser/src/sass/templates/_light.scss
+++ b/browser/src/sass/templates/_light.scss
@@ -208,7 +208,7 @@ $BGCOLOR4:#fff;
 
 @mixin identity-text () {
 	font-size: 24px;
-	letter-spacing: .4em;
+	letter-spacing: .1em;
 	padding: 8px;
 }
 @mixin buttons-box () {
